--- a/Rule.conf
+++ b/Rule.conf
@@ -111,7 +111,7 @@ static=Weibo, US, HK, Final, direct, img-url=https://raw.githubusercontent.com/z
 # > Pinterest
 static=Pinterest, US, HK, JP, TW, SG, Final, direct, img-url=https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Social_Media/Pinterest.png
 # > Bahamut
-static=Bahamut, HK, TW, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Bahamut.png
+static=Bahamut, HK, TW, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Bahamut.png
 # > Instagram
 static=Instagram, US, HK, JP, TW, SG, Final, direct, img-url=https://raw.githubusercontent.com/zhizhi985/icon/main/Policy-Filter/Instagram.png
 #   Mainland-国内访问
@@ -263,6 +263,7 @@ https://raw.githubusercontent.com/VirgilClyne/iRingo/main/qxrewrite/Location.qxr
 (?<=tz_name=)Asia/Shanghai(?=&) url 307 Asia/Taipei
 (?<=timezone=)8(?=&) url 307 -4
 [task_local]
+0 8 * * * https://raw.githubusercontent.com/NobyDa/Script/master/Bahamut/BahamutDailyBonus.js, tag=巴哈姆特签到, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Bahamut.png, enabled=true
 0 0 * * * https://raw.githubusercontent.com/NobyDa/Script/master/BDTieBa-DailyBonus/TieBa.js, tag=百度贴吧签到, img-url=https://raw.githubusercontent.com/tugepaopao/Image-Storage/master/cartoon/Cute/baidu.png, enabled=true
 0 8 * * * https://raw.githubusercontent.com/ClydeTime/Quantumult/main/Script/Task/BiliBili.js, tag=bilibili每日等级任务, img-url=https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Universal/BiliBili.png, enabled=true
 event-interaction https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/geo_location.js, tag=GeoIP查询, img-url=location.fill.viewfinder.system
