--- a/Rule.conf
+++ b/Rule.conf
@@ -20,7 +20,6 @@ no-ipv6
 no-system
 # DoH服务器(DNS over HTTPS)以加密的HTTPS协议进行DNS解析请求，避免原始DNS协议中用户的DNS解析请求被窃听或者修改的问题（例如中间人攻击）来达到保护用户隐私的目的
 # 设置DoH服务器后，所有其他常规DNS服务器设置将被忽略；当设置了多个DoH服务器时，只会使用第一个；当使用的 DoH服务器不是基于HTTP/2时，DoH将被暂时禁用。
-# > DNS over QUIC
 # 阿里 DoH
 doh-server=https://dns.alidns.com/dns-query
 # DNS.SB,阿里,红鱼,IIJ
@@ -46,6 +45,7 @@ server=/*.bilibili.com/119.29.29.29
 server=/*.netease.com/119.29.29.29
 server=/*testflight.apple.com/23.76.66.98
 [policy]
+
 ## 策略组
 ## 将分流规则传递过来的网络请求进行分发
 # 自动选择最优节点-HK
@@ -66,6 +66,8 @@ static=Global, US, HK, JP, TW, SG, Final, direct, img-url=https://raw.githubuser
 # GlobalMedia
 static=GlobalMedia, US, HK, JP, TW, SG, Final, direct, img-url=https://raw.githubusercontent.com/zhizhi985/icon/main/Policy-Filter/GMedia.png
 # 国外媒体细分策略
+# > Whatsapp
+static=Whatsapp, direct, proxy, reject, img-url=https://raw.githubusercontent.com/tugepaopao/Image-Storage/master/cartoon/Cute/whatsapp.png
 # > Netflix
 static=Netflix, US, HK, JP, TW, SG, Final, direct, img-url=https://raw.githubusercontent.com/zhizhi985/icon/main/Policy-Filter/Netflix.png
 # > Disney+
@@ -121,12 +123,13 @@ static=Advertising, direct, reject, img-url=https://raw.githubusercontent.com/zh
 # FINAL策略：如果以上的策略均未被匹配到，则听从此策略组的规定
 static=Final, Auto-HK, proxy, direct, img-url=https://raw.githubusercontent.com/zhizhi985/icon/main/Policy-Filter/Final01.png
 [filter_remote]
-https://raw.githubusercontent.com/zqzess/rule_for_quantumultX/master/QuantumultX/rules/FanQieNovel.list, tag=FanQie, update-interval=86400, opt-parser=true, enabled=true
 ## 远程分流规则订阅
 ## 将网络请求进行分流，网络请求的走向(是否能成功访问)由匹配到的策略组决定
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Whatsapp/Whatsapp.list, tag=Whatsapp, force-policy=Whatsapp, update-interval=86400, opt-parser=false, enabled=true
+https://raw.githubusercontent.com/zqzess/rule_for_quantumultX/master/QuantumultX/rules/FanQieNovel.list, tag=FanQie, update-interval=86400, opt-parser=true, enabled=true
 
 # Pixiv
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Pixiv/Pixiv.list, tag=Pixiv , force-policy=Pixiv, update-interval=86400, opt-parser=false, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Pixiv/Pixiv.list, tag=Pixiv, force-policy=Pixiv, update-interval=86400, opt-parser=false, enabled=true
 # Speedtest
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Speedtest/Speedtest.list, tag=Speedtest , force-policy=Speedtest, update-interval=86400, opt-parser=false, enabled=true
 # Netflix
@@ -186,10 +189,9 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Quant
 # Line
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Line/Line.list, tag=Line,  force-policy=Line, update-interval=86400, opt-parser=true, enabled=true
 [filter_local]
-
 # 本地分流规则:相同规则下本地规则优先生效
 # 绕过企业证书过期
-
+host-suffix, emby.texon.one, HK
 host, ocsp.apple.com, reject
 # 其它
 host-suffix, local, direct
@@ -217,7 +219,7 @@ IP-CIDR,180.76.76.200/32,REJECT
 # opt-parser=true/false 用于控制是否对订阅开启资源解析器，不写或者 false 表示不启用解析器 
 https://raw.githubusercontent.com/ddgksf2013/Scripts/master/pixivAds.js, tag=Pixiv Ads, update-interval=86400, opt-parser=true, enabled=true
 
-https://raw.githubusercontent.com/ClydeTime/Quantumult/main/Task/Remote_Cookie.conf, tag=Cookie, update-interval=86400, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/ClydeTime/Quantumult/main/Task/Remote_Cookie.conf, tag=Cookie, update-interval=86400, opt-parser=true, enabled=false
 https://github.com/ddgksf2013/Scripts/raw/master/keepStyle.js, tag=Keep净化, update-interval=86400, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/ddgksf2013/Scripts/master/12306.js#out=ad.12306.cn, tag=12306去广告, update-interval=86400, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/zqzess/rule_for_quantumultX/master/Surge/Module/zhihu.sgmodule, tag=知乎增强, update-interval=86400, opt-parser=true, enabled=true
@@ -235,7 +237,7 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zhi
 https://raw.githubusercontent.com/zwf234/rules/master/QuantumultX/bilibili.conf, tag=哔哩哔哩相关, update-interval=86400, opt-parser=false, enabled=true
 https://github.com/chavyleung/scripts/raw/master/box/rewrite/boxjs.rewrite.quanx.conf, tag=boxjs, update-interval=86400, opt-parser=false, enabled=true
 https://raw.githubusercontent.com/app2smile/rules/master/module/adsense.conf, tag=广告联盟去广告, update-interval=86400, opt-parser=true, enabled=true
-https://service.2ti.st/QuanX/Rewrite/jd_tb_price.conf, tag=京东比价, update-interval=172800, opt-parser=true, enabled=true
+https://service.2ti.st/QuanX/Rewrite/jd_tb_price.conf, tag=京东比价, update-interval=86400, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rewrite/QuantumultX/Advertising/Advertising.conf, tag=Advertising(blackmatrix7, update-interval=86400, opt-parser=false, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rewrite/QuantumultX/Redirect/Redirect.conf, tag=Redirect(blackmatrix7, update-interval=86400, opt-parser=false, enabled=true
 https://raw.githubusercontent.com/chavyleung/scripts/master/box/rewrite/boxjs.rewrite.quanx.conf, tag=BoxJS, update-interval=86400, opt-parser=false, enabled=true
@@ -263,9 +265,11 @@ https://raw.githubusercontent.com/VirgilClyne/iRingo/main/qxrewrite/Location.qxr
 (?<=tz_name=)Asia/Shanghai(?=&) url 307 Asia/Taipei
 (?<=timezone=)8(?=&) url 307 -4
 [task_local]
-0 8 * * * https://raw.githubusercontent.com/NobyDa/Script/master/Bahamut/BahamutDailyBonus.js, tag=巴哈姆特签到, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Bahamut.png, enabled=true
+0 */2 * * * https://raw.githubusercontent.com/songyangzz/QuantumultX/master/testflight.js, tag=TF监控, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/TestFlight_2.png, enabled=true
 0 0 * * * https://raw.githubusercontent.com/NobyDa/Script/master/BDTieBa-DailyBonus/TieBa.js, tag=百度贴吧签到, img-url=https://raw.githubusercontent.com/tugepaopao/Image-Storage/master/cartoon/Cute/baidu.png, enabled=true
 0 8 * * * https://raw.githubusercontent.com/ClydeTime/Quantumult/main/Script/Task/BiliBili.js, tag=bilibili每日等级任务, img-url=https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Universal/BiliBili.png, enabled=true
+0 8 * * * https://raw.githubusercontent.com/NobyDa/Script/master/Bahamut/BahamutDailyBonus.js, tag=巴哈姆特签到, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Bahamut.png, enabled=true
+
 event-interaction https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/geo_location.js, tag=GeoIP查询, img-url=location.fill.viewfinder.system
 event-interaction https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/streaming-ui-check.js, tag=流媒体解锁检测, img-url=https://raw.githubusercontent.com/zhizhi985/icon/main/Policy-Filter/GMedia.png, enabled=true
 [mitm]
